[package]
name = "sk0"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
r2d2_redis = "0.12"
sidekiq = "0.8.6"
